--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-app:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/github-action-demo:latest .
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/github-action-demo:latest
